Abstracted config loading for JTPClient and JTPServer